--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-440.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.55MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇬🇧 英国-1.34MB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
   - {name: 🇨🇳 中国-160.3KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-949.6KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-397.1KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-747.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.00MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-450.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-570.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-1.08MB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇨🇳 中国-1.74MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.58MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇫🇷 法国-611.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-4.40MB/s(Youtube:不良林), server: 20.239.176.94, port: 443, type: vmess, uuid: 4adf9138-5aca-4a26-b217-335e72bb680d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.176.94}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-440.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-160.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-397.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-747.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-611.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-440.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-160.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-397.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-747.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-611.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-440.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-160.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-397.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-747.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-611.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-440.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-160.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-397.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-747.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-611.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-440.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-160.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-397.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-747.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-611.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-440.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-160.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-397.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-747.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-611.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-440.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.30MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-160.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-397.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-747.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-570.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-611.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
