--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-611.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
   - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.40MB/s(Youtube:不良林), server: 20.239.176.94, port: 443, type: vmess, uuid: 4adf9138-5aca-4a26-b217-335e72bb680d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.176.94}}
-  - {name: 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.79MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-228.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.71MB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
+  - {name: 捷克-234.8KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
   - {name: 🇺🇸 美国-432.8KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-1.97MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇳🇱 荷兰-686.0KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.45MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-856.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 捷克-2.52MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇬🇧 英国-1.68MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.08MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-611.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 捷克-234.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-432.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-686.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
+      - 捷克-2.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-611.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 捷克-234.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-432.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-686.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
+      - 捷克-2.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-611.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 捷克-234.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-432.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-686.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
+      - 捷克-2.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-611.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 捷克-234.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-432.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-686.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
+      - 捷克-2.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-611.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 捷克-234.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-432.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-686.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
+      - 捷克-2.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-611.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 捷克-234.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-432.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-686.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
+      - 捷克-2.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-611.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 捷克-234.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-432.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-686.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
+      - 捷克-2.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
