--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇨🇳 中国-763.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-4.97MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-389.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.37MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.27MB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.20MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.71MB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
+  - {name: 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.30MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇬🇧 英国-3.09MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-8.22MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.22MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.34MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.52MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-763.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-763.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-763.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-763.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-763.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-763.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-763.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
